--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="description"content="Welcome to our website" />
 <meta http-equiv=X-UA-Compatible content="IE=edge">
 <meta name="copyright" content="Marwan Ashraf" />
+<title>Madara Uchiha</title>
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel=stylesheet>
 <link rel=stylesheet href=main.css>
