--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="description"content="Welcome to our website" />
 <meta http-equiv=X-UA-Compatible content="IE=edge">
 <meta name="copyright" content="Marwan Ashraf" />
+<link rel="icon" type="icon/png" href="./images/clan.png">
 <title>Madara Uchiha</title>
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel=stylesheet>
@@ -80,7 +81,7 @@ perspiciatis ducimus autem quia nulla sequi aliquid facere illo nam recusandae i
 <section class=contact id=contact>
 <div class=container>
 <h2>Contact Me</h2>
-<form action method>
+<form action method="post">
 <div>
 <label for=user>Username</label>
 <input type=text name=user minlength=5 maxlength=16>
